deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudmonitor
  labels:
    name: cloudmonitor
    app: cloudmonitor-go
